--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,11 +28,6 @@ endif()
 # ==============================================================================
 # Option to build gpmc as a static executable
 # ==============================================================================
-option(GPMC_STATIC_BUILD "Build gpmc as a static executable" OFF)
-
-# ==============================================================================
-# Compiler flags
-# ==============================================================================
 set(GPMC_COMPILE_FLAGS "-Wall;-Wno-parentheses;-Wno-format;-Wno-sign-compare;-Wno-unused-variable;-Wno-unused-result")
 set(GPMC_GNU_FLAGS "-Wno-literal-suffix;-Wno-class-memaccess")
 set(GPMC_CLANG_FLAGS "-Wno-reserved-user-defined-literal;-Wno-gnu-array-member-paren-init")
@@ -43,47 +38,51 @@ set(GPMC_APPLECLANG_FLAGS "-Wno-redundant-move;-Wno-undefined-var-template")
 # ==============================================================================
 add_subdirectory(flow-cutter-pace17)
 
-# ==============================================================================
-# Build the core gpmc library (STATIC)
-# ==============================================================================
-add_library(gpmc STATIC
-    core/ComponentCache.cc core/ComponentManager.cc core/Counter.cc
-    core/Config.cc core/Instance.cc ddnnf/DecisionTree.cc
-    core/Solver.cc c-mpfr/ComplexMPFR.cc utils/Options.cc
-    utils/System.cc preprocessor/Preprocessor.cc preprocessor/TestSolver.cc
+add_library(gpmc_shared SHARED
+
+    core/ComponentCache.cc
+    core/ComponentManager.cc
+    core/Counter.cc
+    core/Config.cc
+    core/Instance.cc
+    ddnnf/DecisionTree.cc
+    core/Solver.cc
+    c-mpfr/ComplexMPFR.cc
+    utils/Options.cc
+    utils/System.cc
+    preprocessor/Preprocessor.cc
+    preprocessor/TestSolver.cc
     preprocessor/lib_sharpsat_td/subsumer.cpp
-    preprocessor/TreeDecomposition.cc preprocessor/IFlowCutter.cc
+    preprocessor/TreeDecomposition.cc
+    preprocessor/IFlowCutter.cc
 )
 
-# ==============================================================================
-# Set include directories and compile definitions/options for gpmc library
-# ==============================================================================
-target_include_directories(gpmc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/flow-cutter-pace17/src)
-target_compile_options(gpmc PRIVATE $<$<CONFIG:Debug>:-O0> ${GPMC_COMPILE_FLAGS} $<$<CXX_COMPILER_ID:GNU>:${GPMC_GNU_FLAGS}> $<$<CXX_COMPILER_ID:Clang>:${GPMC_CLANG_FLAGS}> $<$<CXX_COMPILER_ID:AppleClang>:${GPMC_APPLECLANG_FLAGS};${GPMC_CLANG_FLAGS}>)
+set_target_properties(gpmc_shared PROPERTIES
+    OUTPUT_NAME "gpmc"
+    CLEAN_DIRECT_OUTPUT 1
+)
 
-# ==============================================================================
-# Build the final executable
-# ==============================================================================
-add_executable(gpmc-bin core/Main.cc)
-set_target_properties(gpmc-bin PROPERTIES OUTPUT_NAME gpmc)
-target_compile_options(gpmc-bin PRIVATE $<$<CONFIG:Debug>:-O0> ${GPMC_COMPILE_FLAGS} $<$<CXX_COMPILER_ID:GNU>:${GPMC_GNU_FLAGS}> $<$<CXX_COMPILER_ID:Clang>:${GPMC_CLANG_FLAGS}> $<$<CXX_COMPILER_ID:AppleClang>:${GPMC_APPLECLANG_FLAGS};${GPMC_CLANG_FLAGS}>)
+target_include_directories(gpmc_shared PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/flow-cutter-pace17/src
+)
 
-# ==============================================================================
+target_compile_options(gpmc_shared PRIVATE
+    $<$<CONFIG:Debug>:-O0>
+    ${GPMC_COMPILE_FLAGS}
+    $<$<CXX_COMPILER_ID:GNU>:${GPMC_GNU_FLAGS}>
+    $<$<CXX_COMPILER_ID:Clang>:${GPMC_CLANG_FLAGS}>
+    $<$<CXX_COMPILER_ID:AppleClang>:${GPMC_APPLECLANG_FLAGS};${GPMC_CLANG_FLAGS}>
+)
+
+# # ==============================================================================
 # Link all required libraries
 # ==============================================================================
 
-target_link_libraries(gpmc-bin PRIVATE
-    gpmc
+target_link_libraries(gpmc_shared PRIVATE
     flowcutter
     gmp
     gmpxx
     mpfr
     z
 )
-
-# ==============================================================================
-# Handle static linking option
-# ==============================================================================
-if(GPMC_STATIC_BUILD)
-    set_property(TARGET gpmc-bin APPEND PROPERTY LINK_FLAGS "-static")
-endif()
