--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,22 +8,21 @@ cmake_minimum_required(VERSION 3.15)
 # ==============================================================================
 project(gpmc LANGUAGES CXX)
 
-# ==============================================================================
-# Global C++ standard settings (Best Practice)
-# ==============================================================================
-add_compile_definitions(__STDC_FORMAT_MACROS __STDC_LIMIT_MACROS)
+
+if(DEFINED ENV{CONDA_PREFIX})
+    list(APPEND CMAKE_PREFIX_PATH "$ENV{CONDA_PREFIX}")
+endif()
+
+
+find_package(GMP REQUIRED)
+find_package(MPFR REQUIRED)
+find_package(ZLIB REQUIRED)
+
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# ==============================================================================
-# [Workaround] Force include and link directories for local Conda environments
-# ==============================================================================
-if(DEFINED ENV{CONDA_PREFIX})
-    message(STATUS "WORKAROUND: Forcing include and link directories to $ENV{CONDA_PREFIX}")
-    include_directories($ENV{CONDA_PREFIX}/include)
-    link_directories($ENV{CONDA_PREFIX}/lib)
-endif()
+add_compile_definitions(__STDC_FORMAT_MACROS __STDC_LIMIT_MACROS)
 
 # ==============================================================================
 # Option to build gpmc as a static executable
@@ -39,34 +38,20 @@ set(GPMC_APPLECLANG_FLAGS "-Wno-redundant-move;-Wno-undefined-var-template")
 add_subdirectory(flow-cutter-pace17)
 
 add_library(gpmc_shared SHARED
-
-    core/ComponentCache.cc
-    core/ComponentManager.cc
-    core/Counter.cc
-    core/Config.cc
-    core/Instance.cc
-    ddnnf/DecisionTree.cc
-    core/Solver.cc
-    c-mpfr/ComplexMPFR.cc
-    utils/Options.cc
-    utils/System.cc
-    preprocessor/Preprocessor.cc
-    preprocessor/TestSolver.cc
+    core/ComponentCache.cc core/ComponentManager.cc core/Counter.cc
+    core/Config.cc core/Instance.cc ddnnf/DecisionTree.cc
+    core/Solver.cc c-mpfr/ComplexMPFR.cc utils/Options.cc
+    utils/System.cc preprocessor/Preprocessor.cc preprocessor/TestSolver.cc
     preprocessor/lib_sharpsat_td/subsumer.cpp
-    preprocessor/TreeDecomposition.cc
-    preprocessor/IFlowCutter.cc
+    preprocessor/TreeDecomposition.cc preprocessor/IFlowCutter.cc
 )
 
-set_target_properties(gpmc_shared PROPERTIES
-    OUTPUT_NAME "gpmc"
-    CLEAN_DIRECT_OUTPUT 1
-)
+set_target_properties(gpmc_shared PROPERTIES OUTPUT_NAME "gpmc")
 
 target_include_directories(gpmc_shared PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/flow-cutter-pace17/src
 )
-
 target_compile_options(gpmc_shared PRIVATE
     $<$<CONFIG:Debug>:-O0>
     ${GPMC_COMPILE_FLAGS}
@@ -80,9 +65,9 @@ target_compile_options(gpmc_shared PRIVATE
 # ==============================================================================
 
 target_link_libraries(gpmc_shared PRIVATE
-    flowcutter
-    gmp
-    gmpxx
-    mpfr
-    z
+	flowcutter
+	GMP::gmp       
+	GMP::gmpxx     
+	MPFR::mpfr    
+	ZLIB::zlib     
 )
