--- a/.github/workflows/build-cross-platform.yml
+++ b/.github/workflows/build-cross-platform.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
@@ -22,27 +23,43 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Set up CMake
-      uses: lukka/get-cmake@v3.29.2
+    - name: Install GMP & MPFR
+      shell: bash
+      run: |
+        if [ "${{ runner.os }}" = "Linux" ]; then
+          sudo apt-get update -y
+          sudo apt-get install -y libgmp-dev libmpfr-dev
+        elif [ "${{ runner.os }}" = "macOS" ]; then
+          brew install gmp mpfr
+        else    # Windows
+          git clone https://github.com/microsoft/vcpkg.git --depth 1
+          ./vcpkg/bootstrap-vcpkg.sh
+          ./vcpkg/vcpkg install gmp mpfr --triplet x64-windows-static
+          echo "VCPKG_ROOT=$PWD/vcpkg" >> "$GITHUB_ENV"
+          echo "CMAKE_TOOLCHAIN_FILE=$PWD/vcpkg/scripts/buildsystems/vcpkg.cmake" >> "$GITHUB_ENV"
+        fi
 
     - name: Configure CMake
-      run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
+      shell: bash
+      run: |
+        cmake -S . -B build -DCMAKE_BUILD_TYPE=Release \
+          ${CMAKE_TOOLCHAIN_FILE:+-DCMAKE_TOOLCHAIN_FILE=$CMAKE_TOOLCHAIN_FILE}
 
     - name: Build
       run: cmake --build build --config Release --parallel
 
     - name: Set binary path by OS
-      id: setpath
+      id: bin
       shell: bash
       run: |
         if [ "${{ runner.os }}" = "Windows" ]; then
-          echo "bin_path=build/Release/GPMC.exe" >> "$GITHUB_OUTPUT"
+          echo "path=build\\Release\\GPMC.exe" >> "$GITHUB_OUTPUT"
         else
-          echo "bin_path=build/GPMC" >> "$GITHUB_OUTPUT"
+          echo "path=build/GPMC" >> "$GITHUB_OUTPUT"
         fi
 
     - name: Upload binary artifact
       uses: actions/upload-artifact@v4
       with:
         name: gpmc-${{ runner.os }}-${{ runner.arch }}
-        path: ${{ steps.setpath.outputs.bin_path }}
+        path: ${{ steps.bin.outputs.path }}
