--- a/.github/workflows/build-cross-platform.yml
+++ b/.github/workflows/build-cross-platform.yml
@@ -63,7 +63,8 @@ jobs:
         if [ "${{ runner.os }}" = "Windows" ]; then
           echo "path=build\\Release\\GPMC.exe" >> "$GITHUB_OUTPUT"
         else
-          echo "path=build/GPMC" >> "$GITHUB_OUTPUT"
+          EXECUTABLE=$(find build -maxdepth 1 -type f -perm +111 -exec basename {} \; | head -n1)
+          echo "path=build/$EXECUTABLE" >> "$GITHUB_OUTPUT"
         fi
 
     - name: Upload binary artifact
